--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,47 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+
+    font-family: -apple-system, BlinkMacSystemFont,
+        'Roboto',
+        sans-serif;
+
+
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+
+}
+
+:root{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 130%;
+    letter-spacing: 0.1px;
+
+    --ui__background: #27272A;
+    --ui__color: #414144;
+    --content__background: #202124;
+    --content__color-focus: #FFF;
+    --content__color-blur: #A1A1AA;
+
+    background-color: var(--ui__background, #27272A);
+    color: var(--content__color-blur, #A1A1AA);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
+input {
+    outline: none;
+}
+
+th{
+    font-weight: inherit;
+}
+
 * {
-  box-sizing: border-box;
-  outline: none;
+    box-sizing: border-box;
+    outline: none;
 }
