--- a/src/features/CustomTable/EditableRow.module.scss
+++ b/src/features/CustomTable/EditableRow.module.scss
@@ -2,5 +2,29 @@
     &__item{
     }
     &__input{
+        background-image: none;
+        background-color: transparent;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+        -webkit-appearance: textfield;
+        -moz-appearance: textfield;
+        appearance: textfield;
+
+        font-family: inherit;
+        font-style: inherit;
+        font-weight: inherit;
+        font-size: inherit;
+        line-height: inherit;
+        letter-spacing: inherit;
+
+        width: 100%;
+        height: 36px;
+
+        border: 1px solid var(--ui__color);
+        border-radius: 6px;
+        color: #71717A;
+
+        padding: 0 10px;
     }
 }
